# HelixBoot

./: .gitignore  CMakeLists.txt  README.md
arch/arm64/: CMakeLists.txt  asm.c  asm.s  crt0.s  mmu.s
cmake/: config.cmake  qemu-ovmf-arm.cmake  qemu-ovmf-arm64.cmake
devices/: CMakeLists.txt  disk.c  uart.c
include/: bootinfo.h  efi.h  efi_api.h  efi_def.h  efi_lib.h  kernel.h  qemu.h
include/arch/: asm.h  cache.h
include/devices/: disk.h  uart.h
include/elf/: elf.h  elf_api.h  elf_def.h  elf_utils.h
include/mm/: mm.h  paging.h
init/: CMakeLists.txt  main.c  prekernel.s
lib/: .gitignore  CMakeLists.txt  README.md
lib/efi/: CMakeLists.txt  alloc.c  file_info.c  free.c  guidcmp.c  is_alpha.c  is_digit.c  itoa.c  lib_init.c  malloc.c  memcmp.c  memcpy.c  memset.c  printf.c  putc.c  puts.c  sleep.c  sprintf.c  strcmp.c  strcpy.c  strlen.c  strrep.c  strrev.c  tolower.c  toupper.c  vprintf.c  vsprintf.c
lib/elf/: CMakeLists.txt  elf_api.c  elf_check.c  elf_close.c  elf_dyn.c  elf_load.c  elf_open.c  elf_phdrs.c  elf_shdrs.c  elf_start.c  elf_sym.c  elf_syms.c  elf_utils.c  elf_verify.c
mm/: CMakeLists.txt  mm.c  paging.c
scripts/: .gitignore  CMakeLists.txt  boot.sh  diskctl.py  gen_uuid.py  idx.c  requirements.txt  startup.nsh  sync.sh  test  test.c
